# veilt

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  compile.py  pyproject.toml  setup.py
.github/workflows/: build-release.yml  publish.yml
assets/: requirements.txt
examples/: admin_mode.py  quickstart.py
src/: __init__.py  antimem.py  clean.py  commands.py  config.py  crypto.py  daemon.py  elevate.py  exceptions.py  i18n.py  integrity.py  logs.py  main.py  memory.py  osvault.py  vault.py  veil.py  veilt.py
src/cli/: main.py  output.py
src/locales/: en.json  fr.json
src/logique/: __init__.py  core.py
src/native/: engine.cpp  secure_mem.hpp
src/native/ram/: compile.txt  ram.cpp
src/tests/: encryption_test.py  memory_test.py  run_tests.py  security_test.py
src/vault/: __init__.py  antimem.py  crypto.py  daemon.py  integrity.py  logs.py  ram.py  tokens.py
src/veilt/: __init__.py  config.py  crypto.py  osvault.py
src/veilt/locales/: fr.json
src/veilt/native/: engine.cpp  secure_mem.hpp
src/veilt/tests/: memory_test.py  test.txt
src/veilt/vault/: __init__.py  core.py  crypto.py  daemon.py  ram.py
tests/: conftest.py  test_cli.py  test_crypto.py  test_integrity.py  test_native.py  test_vault.py
tools/: compileur.py
