[build-system]
requires = ["setuptools>=68", "wheel", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "veil-vault"
version = "1.0.0"
description = "Secure, encrypted, in-memory/on-disk secret vault for Python - drop into any project with just a password."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "yolezz" }
]
keywords = ["security", "vault", "secrets", "encryption", "aes-gcm", "argon2", "credentials", "keyring"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=42.0",
    "argon2-cffi>=23.1",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
keyring = ["keyring>=24.0"]
windows = ["pywin32>=306; platform_system=='Windows'"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "build>=1.0", "cibuildwheel>=2.17"]

[project.urls]
Homepage = "https://github.com/yo-le-zz/veil"
Repository = "https://github.com/yo-le-zz/veil"
Issues = "https://github.com/yo-le-zz/veil/issues"
Changelog = "https://github.com/yo-le-zz/veil/blob/main/CHANGELOG.md"

[project.scripts]
veil = "veil.cli.main:run"

[tool.setuptools]
package-dir = { "veil" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
veil = ["locales/*.json"]
vault = ["native/ram/build/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel]
build-verbosity = 1
test-requires = "pytest"
test-command = "python -c \"import veil; assert veil.is_native_available()\""

[tool.cibuildwheel.linux]
before-all = "yum install -y gcc-c++ || apt-get update && apt-get install -y g++ || true"
